added comments back to the test