@@ -39,11 +39,14 @@ class UserServiceTest {
 
     @Test
     void createUser_shouldReturnUserDTO() {
+        // Arrange
         CreateUserDTO createUserDTO = new CreateUserDTO("Lionel Messi", "lionel.messi@gmail.com");
         when(userRepository.save(any(User.class))).thenReturn(mockUser);
 
+        // Act
         UserDTO result = userService.createUser(createUserDTO);
 
+        // Assert
         assertNotNull(result);
         assertEquals("Lionel Messi", result.name());
         assertEquals("lionel.messi@gmail.com", result.email());
@@ -52,59 +55,75 @@ class UserServiceTest {
 
     @Test
     void createUser_withEmptyName_shouldThrowException() {
+        // Arrange
         CreateUserDTO createUserDTO = new CreateUserDTO("", "lionel.messi@gmail.com");
 
+        // Act & Assert
         assertThrows(IllegalArgumentException.class, () -> userService.createUser(createUserDTO));
     }
 
     @Test
     void createUser_withInvalidCharactersInName_shouldThrowException() {
+        // Arrange
         CreateUserDTO createUserDTO = new CreateUserDTO("Lionel@Messi", "lionel.messi@gmail.com");
 
+        // Act & Assert
         assertThrows(IllegalArgumentException.class, () -> userService.createUser(createUserDTO));
     }
 
     @Test
     void createUser_withTooLongName_shouldThrowException() {
+        // Arrange
         String longName = "a".repeat(101);
         CreateUserDTO createUserDTO = new CreateUserDTO(longName, "lionel.messi@gmail.com");
 
+        // Act & Assert
         assertThrows(IllegalArgumentException.class, () -> userService.createUser(createUserDTO));
     }
 
     @Test
     void createUser_withDuplicateEmail_shouldThrowException() {
+        // Arrange
         CreateUserDTO createUserDTO = new CreateUserDTO("Lionel Messi", "lionel.messi@gmail.com");
         when(userRepository.findByEmail("lionel.messi@gmail.com")).thenReturn(Optional.of(mockUser));
 
+        // Act & Assert
         assertThrows(IllegalArgumentException.class, () -> userService.createUser(createUserDTO));
     }
 
     @Test
     void createUser_withInvalidEmail_shouldThrowException() {
+        // Arrange
         CreateUserDTO createUserDTO = new CreateUserDTO("Lionel Messi", "invalid-email");
 
+        // Act & Assert
         assertThrows(IllegalArgumentException.class, () -> userService.createUser(createUserDTO));
     }
 
     @Test
     void getAllUsers_shouldReturnListOfUserDTOs() {
+        // Arrange
         when(userRepository.findAll()).thenReturn(List.of(mockUser));
 
+        // Act
         List<UserDTO> result = userService.getAllUsers();
 
+        // Assert
         assertEquals(1, result.size());
-        assertEquals("Lionel Messi", result.getFirst().name());
-        assertEquals("lionel.messi@gmail.com", result.getFirst().email());
+        assertEquals("Lionel Messi", result.get(0).name());
+        assertEquals("lionel.messi@gmail.com", result.get(0).email());
         verify(userRepository, times(1)).findAll();
     }
 
     @Test
     void getUserById_shouldReturnUserDTO() {
+        // Arrange
         when(userRepository.findById(userId)).thenReturn(Optional.of(mockUser));
 
+        // Act
         UserDTO result = userService.getUserById(userId);
 
+        // Assert
         assertNotNull(result);
         assertEquals("Lionel Messi", result.name());
         assertEquals("lionel.messi@gmail.com", result.email());
@@ -113,12 +132,15 @@ class UserServiceTest {
 
     @Test
     void updateUser_shouldReturnUpdatedUserDTO() {
+        // Arrange
         CreateUserDTO updatedUserDTO = new CreateUserDTO("Lionel Messi Updated", "lionel.messi.updated@gmail.com");
         when(userRepository.findById(userId)).thenReturn(Optional.of(mockUser));
         when(userRepository.save(mockUser)).thenReturn(mockUser);
 
+        // Act
         UserDTO result = userService.updateUser(userId, updatedUserDTO);
 
+        // Assert
         assertNotNull(result);
         assertEquals("Lionel Messi Updated", result.name());
         assertEquals("lionel.messi.updated@gmail.com", result.email());
@@ -127,8 +149,10 @@ class UserServiceTest {
 
     @Test
     void deleteUser_shouldInvokeRepositoryDeleteById() {
+        // Act
         userService.deleteUser(userId);
 
+        // Assert
         verify(userRepository, times(1)).deleteById(userId);
     }
 }
